--- a/src/project.config.json
+++ b/src/project.config.json
@@ -22,7 +22,7 @@
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
     "useMultiFrameRuntime": false,
-    "useApiHook": false,
+    "useApiHook": true,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -36,7 +36,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.12.2",
-  "appid": "wxafcce2dd5e9a7f48",
+  "appid": "wx65c8d128ef76676b",
   "projectname": "HUILV",
   "debugOptions": {
     "hidedInDevtools": []
