--- a/src/project.config.json
+++ b/src/project.config.json
@@ -36,7 +36,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.12.2",
-  "appid": "wx65c8d128ef76676b",
+  "appid": "wxafcce2dd5e9a7f48",
   "projectname": "HUILV",
   "debugOptions": {
     "hidedInDevtools": []
