--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
     "ignore": []
   },
   "setting": {
-    "urlCheck": false,
+    "urlCheck": true,
     "es6": true,
     "enhance": false,
     "postcss": true,
@@ -38,13 +38,14 @@
   "libVersion": "2.12.2",
   "appid": "wx07bfb8926cbf8b58",
   "projectname": "HUILV",
+  "cloudfunctionTemplateRoot": "",
+  "watchOptions": {
+    "ignore": []
+  },
   "debugOptions": {
     "hidedInDevtools": []
   },
   "scripts": {},
-  "isGameTourist": false,
-  "simulatorType": "wechat",
-  "simulatorPluginLibVersion": {},
   "condition": {
     "search": {
       "current": -1,
@@ -54,11 +55,11 @@
       "current": -1,
       "list": []
     },
-    "game": {
+    "plugin": {
       "current": -1,
       "list": []
     },
-    "plugin": {
+    "game": {
       "current": -1,
       "list": []
     },
