修改并完善了js代码, 整理注释并去掉无用代码 添加了调试使用的标记, 调试信息在非调试模式下不会显示 完善了第二页, 但免费api的效果不好 添加第一页和第二页的逻辑判断, 减少不合法输入

--- a/src/project.config.json
+++ b/src/project.config.json
@@ -6,7 +6,7 @@
   "setting": {
     "urlCheck": false,
     "es6": true,
-    "enhance": false,
+    "enhance": true,
     "postcss": true,
     "preloadBackgroundData": false,
     "minified": true,
@@ -28,6 +28,7 @@
       "disablePlugins": [],
       "outputPath": ""
     },
+    "bundle": true,
     "useIsolateContext": true,
     "useCompilerModule": true,
     "userConfirmedUseCompilerModuleSwitch": false,
@@ -35,8 +36,8 @@
     "packNpmRelationList": []
   },
   "compileType": "miniprogram",
-  "libVersion": "2.12.2",
-  "appid": "wx07bfb8926cbf8b58",
+  "libVersion": "2.13.1",
+  "appid": "wxafcce2dd5e9a7f48",
   "projectname": "HUILV",
   "debugOptions": {
     "hidedInDevtools": []
